--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "builds": [
+    { "src": "app/api/**/*.ts", "use": "@vercel/node" },
     { "src": "client/dist/**/*", "use": "@vercel/static" }
   ],
   "routes": [
@@ -11,8 +12,5 @@
     "DATABASE_URL": "@database_url",
     "SUPABASE_URL": "@supabase_url",
     "SUPABASE_ANON_KEY": "@supabase_anon_key"
-  },
-  "functions": {
-    "app/api/**/*.ts": { "runtime": "nodejs18.x" }
   }
 }
