--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,24 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app/api/**/*.ts", "use": "@vercel/node" },
-    { "src": "client/dist/**/*", "use": "@vercel/static" }
+    {
+      "src": "app/**/*.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "client/dist/**/*",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/app/api/$1" },
-    { "src": "/(.*)", "dest": "/client/dist/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/app/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/dist/$1"
+    }
   ],
   "env": {
     "DATABASE_URL": "@database_url",
